@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.Controller {
        + collectionButtons : AnchorPane
        + insertInput : TextField
        + listView : ListView
        + searchInput : TextField
        + delete()
        + insert()
        + search()
        - clearListView()
        - displayCollection()
    }
  }
  

  namespace sample {
    class sample.Main {
        + start()
    }
  }
  

  sample.Controller o-- sample.Metods.Adapter : adapter
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
